--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "bugs": {
         "url": "https://github.com/kin982/M133/issues"
     },
-    "homepage": "https://github.com/kin982/M133#readme"
+    "homepage": "https://github.com/kin982/M133#readme",
+    "dependencies": {
+        "url": "^0.11.0"
+    }
 }
